cache 처리 구현