@@ -1,14 +1,11 @@
 package me.blog.backend.domain.blog.service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
-import org.springframework.data.domain.Sort;
+import me.blog.backend.domain.blog.cache.BlogCache;
+import me.blog.backend.domain.blog.cache.BlogSeriesCache;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,10 +20,15 @@ import me.blog.backend.domain.blog.repository.BlogRepository;
 public class BlogService {
   private final BlogRepository blogRepository;
   private final BlogSeriesRepository blogSeriesRepository;
+  private final BlogCache blogCache;
+  private final BlogSeriesCache blogSeriesCache;
 
-  public BlogService(BlogRepository blogRepository, BlogSeriesRepository blogSeriesRepository) {
+
+  public BlogService(BlogRepository blogRepository, BlogSeriesRepository blogSeriesRepository, BlogCache blogCache, BlogSeriesCache blogSeriesCache) {
     this.blogRepository = blogRepository;
     this.blogSeriesRepository = blogSeriesRepository;
+    this.blogCache = blogCache;
+    this.blogSeriesCache = blogSeriesCache;
   }
 
   @Transactional
@@ -40,18 +42,19 @@ public class BlogService {
   }
 
   private BlogVO handleBlogByType(String userId, String title, String content, String thumbnailUrl, String type) {
-    Optional<BlogEntity> byType = blogRepository.findByType(type);
-    if(byType.isPresent()) {
-      return updateBlog(byType.get().getId(), userId, title, content, thumbnailUrl);
-    }
-    BlogEntity blog = new BlogEntity(userId, title, content, thumbnailUrl, type);
-    return BlogVO.fromEntity(blogRepository.save(blog));
+    BlogEntity blog = blogCache.findByType(type)
+      .orElseGet(() -> blogRepository.findByType(type)
+        .orElseThrow(() -> new BlogNotFoundException(type))
+    );
+
+    return updateBlog(blog.getId(), userId, title, content, thumbnailUrl);
   }
 
   @Transactional
   public BlogVO updateBlog(Long id,String userId, String newTitle, String newContent, String thumbNailUrl) {
     BlogEntity blogEntity = blogRepository.findById(id)
-        .orElseThrow(() -> new BlogNotFoundException(String.format("Blog with ID %s not found", id)));
+      .orElseThrow(() -> new BlogNotFoundException("Blog with ID %s not found".formatted(id))
+    );
 
     blogEntity.setAuthor(userId);
     blogEntity.setTitle(newTitle);
@@ -59,21 +62,33 @@ public class BlogService {
     blogEntity.setUpdatedAt(LocalDateTime.now());
     blogEntity.upLoadThumbnailUrl(thumbNailUrl);
 
-    return BlogVO.fromEntity(blogRepository.save(blogEntity));
+    BlogEntity savedEntity = blogRepository.save(blogEntity);
+    blogCache.putAll();
+
+    return BlogVO.fromEntity(savedEntity);
   }
 
   @Transactional
   public BlogVO updateBlogContent(Long id, String newContent) {
     BlogEntity blogEntity = blogRepository.findById(id)
-        .orElseThrow(() -> new BlogNotFoundException(String.format("Blog with ID %s not found", id)));
+      .orElseThrow(() -> new BlogNotFoundException("Blog with ID %s not found".formatted(id))
+    );
 
     blogEntity.setContent(newContent);
-    return BlogVO.fromEntity(blogRepository.save(blogEntity));
+    BlogEntity savedEntity = blogRepository.save(blogEntity);
+    blogCache.putAll();
+
+    return BlogVO.fromEntity(savedEntity);
   }
 
   @Transactional(readOnly = true)
   public List<BlogVO> getAllBlogs() {
-    return blogRepository.findAll().stream()
+    List<BlogEntity> cachedBlogs = blogCache.findAll();
+    List<BlogEntity> blogs = cachedBlogs.isEmpty()
+            ? blogRepository.findAll()
+            : cachedBlogs;
+
+    return blogs.stream()
             .filter(BlogEntity::isPublished)
             .map(BlogVO::fromEntity)
             .collect(Collectors.toList());
@@ -81,37 +96,47 @@ public class BlogService {
 
   @Transactional(readOnly = true)
   public List<BlogVO> getAllBlogsByUser(String userId) {
-    return blogRepository.findByAuthor(userId).stream()
+    List<BlogEntity> cachedBlogs = blogCache.findByAuthor(userId);
+    List<BlogEntity> blogs = cachedBlogs.isEmpty()
+            ? blogRepository.findByAuthor(userId)
+            : cachedBlogs;
+
+    return blogs.stream()
             .map(BlogVO::fromEntity)
             .collect(Collectors.toList());
   }
 
   @Transactional
   public BlogVO getBlogById(Long id) {
-    BlogEntity blogEntity = blogRepository.findById(id)
-        .orElseThrow(() -> new BlogNotFoundException(String.format("Blog with ID %s not found", id)));
+    BlogEntity blogEntity = blogCache.findById(id)
+      .orElseGet(() -> blogRepository.findById(id)
+        .orElseThrow(() -> new BlogNotFoundException("Blog with ID %s not found".formatted(id)))
+      );
 
-    blogEntity.readCounting();
+    blogRepository.incrementReadCount(id);
     return BlogVO.fromEntity(blogEntity);
   }
 
   @Transactional(readOnly = true)
   public BlogVO getBlogByType(String type) {
-    BlogEntity blog = blogRepository.findByType(type).orElse(
-            new BlogEntity("","","""
-            {
-              "blocks": [
-                {
-                  "id": "",
-                  "type": "paragraph",
-                  "data": {
-                    "text": ""
-                  }
+    BlogEntity blog= blogCache.findByType(type).orElseGet(
+      () -> blogRepository.findByType(type)
+        .orElse(new BlogEntity("","","""
+          {
+            "blocks": [
+              {
+                "id": "",
+                "type": "paragraph",
+                "data": {
+                  "text": ""
                 }
-              ],
-              "version": ""
-            }
-            """));
+              }
+            ],
+            "version": ""
+          }
+          """
+        ))
+    );
 
     return BlogVO.fromEntity(blog);
   }
@@ -119,7 +144,14 @@ public class BlogService {
   @Transactional(readOnly = true)
   public Map<String, List<BlogVO>> getBlogGroupBySeries(){
     Map<String, List<BlogVO>> result = new HashMap<>();
-    List<BlogSeriesEntity> blogSeriesEntityList = blogSeriesRepository.findAll(Sort.by(Sort.Direction.ASC, "series_id"));
+    List<BlogSeriesEntity> series = blogSeriesCache.findAll();
+    List<BlogSeriesEntity> blogSeriesEntityList = series.isEmpty()
+            ? blogSeriesRepository.findAll()
+            : series;
+
+    blogSeriesEntityList = blogSeriesEntityList.stream()
+            .sorted(Comparator.comparing(BlogSeriesEntity::getId)).toList();
+
     for (BlogSeriesEntity blogSeriesEntity : blogSeriesEntityList) {
       String key = blogSeriesEntity.getSeries().getName();
       BlogVO blogVO = BlogVO.fromEntity(blogSeriesEntity.getBlog());
@@ -135,6 +167,7 @@ public class BlogService {
        .orElseThrow(() -> new BlogNotFoundException(String.format("Blog with ID %s not found", id)));
 
    blog.publish();
+   blogCache.putAll();
    return BlogVO.fromEntity(blog);
   }
 
@@ -144,6 +177,7 @@ public class BlogService {
        .orElseThrow(() -> new BlogNotFoundException(String.format("Blog with ID %s not found", id)));
 
    blog.unpublish();
+   blogCache.putAll();
    return BlogVO.fromEntity(blog);
   }
 }
